[package]
name = "host-local"
version = "0.1.0"
authors = ["bluven <yanshiyi1983@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
ipnetwork = "0.17.0"
thiserror = "1"